--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Apache ManifoldCF Plugin for Elastic Search change Log
-$Id: CHANGES.txt 1571169 2015-04-29  Bartlomiej Superson $
+$Id$
 
 ======================= 2.0-SNAPSHOT =====================
 
 Initial commit.
-(Karl Wright)
+(Karl Wright, on behalf of Bartłomiej Superson)
