Prepare release branch
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/integration/elasticsearch-1.5/branches/release-2.0-branch@1688718 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Apache ManifoldCF Plugin for Elastic Search change Log
 $Id$
 
-======================= 2.0-SNAPSHOT =====================
+======================= Release 2.0 =====================
 
 Initial commit.
 (Karl Wright, on behalf of Bartłomiej Superson)
