Fix for CONNECTORS-1228.
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/integration/elasticsearch-1.5/trunk@1696112 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,8 @@ $Id$
 
 ======================= 2.1-SNAPSHOT =====================
 
+CONNECTORS-1228: Fix default values so they are correct.
+
 ======================= Release 2.0 =====================
 
 Initial commit.
