Fix for CONNECTORS-1314.  Warning: non backwards compatible change!
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/integration/elasticsearch-1.5/trunk@1743926 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,9 +3,11 @@ $Id$
 
 ======================= 2.1-SNAPSHOT =====================
 
-CONNECTORS-1228: Fix default values so they are correct.
-
 ======================= Release 2.0 =====================
+
+CONNECTORS-1314: Use ":" as mcf user name / mcf domain name separator instead of "@".
+
+CONNECTORS-1228: Fix default values so they are correct.
 
 Initial commit.
 (Karl Wright, on behalf of Bartłomiej Superson)
