Pull up fix for CONNECTORS-1314, and prepare for 2.0.2 release.
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/integration/elasticsearch-1.5/branches/release-2.0-branch@1743928 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 Apache ManifoldCF Plugin for Elastic Search change Log
 $Id$
 
+======================= Release 2.0.2 =====================
+
+CONNECTORS-1314: Use ":" as mcf user name / mcf domain name separator instead of "@".
+
 ======================= Release 2.0.1 =====================
 
 CONNECTORS-1228: Fix default values so they are correct.
