Update missing ES version stuff
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/integration/elasticsearch-1.5/trunk@1807134 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-Apache ManifoldCF Plugin for Elastic Search change Log
+Apache ManifoldCF Plugin for Elastic Search 1.5 change Log
 $Id$
 
 ======================= 2.1-SNAPSHOT =====================
